tests/samples/invalid/array_in_word.pn
word32 Bar
{
	data: [4]u8,
}
